Makefile nearly there

--- a/ports/tm4c123/Makefile
+++ b/ports/tm4c123/Makefile
@@ -10,21 +10,14 @@ QSTR_DEFS = qstrdefsport.h
 #
 PART=TM4C123GH6PM
 
+PROJECT_NAME = uPY_TM4C123
+
 TIVAWARE_LIB = TivaWare/
 
 #
 # The base directory for TivaWare.
 #
 ROOT = $(TIVAWARE_LIB)
-
-#
-# Include the common make definitions.
-#
-include $(ROOT)/makedefs
-
-VPATH = $(TIVAWARE_LIB)/utils
-
-IPATH = $(TIVAWARE_LIB) ./ $(TOP) $(BUILD) $(TIVAWARE_LIB)/inc
 
 # include py core make definitions
 include $(TOP)/py/py.mk
@@ -33,10 +26,19 @@ ifeq ($(CROSS), 1)
 CROSS_COMPILE = arm-none-eabi-
 endif
 
+OD = $(CROSS_COMPILE)objdump
+
+ODFLAGS = -S
+LFLAGS = --gc-sections
+CPFLAGS = -OBinary
+
+LINKER_FILE = tm4c123gh6pm.ld
+
 INC += -I.
 INC += -I$(TOP)
 INC += -I$(BUILD)
 INC += -I$(TIVAWARE_LIB)
+INC += -I$(TIVAWARE_LIB)/inc
 INC += -I$(PY_SRC)
 INC += -I../../
 
@@ -46,9 +48,9 @@ PYDFU = $(TOP)/tools/pydfu.py
 CFLAGS_CORTEX_M4 = -mthumb -mtune=cortex-m4 -mabi=aapcs-linux -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -fsingle-precision-constant -Wdouble-promotion
 CFLAGS = $(INC) -Wall -Werror -std=gnu99 -nostdlib $(CFLAGS_CORTEX_M4) $(COPT)
 #Preprocessor Flags
-CFLAGS += -D$(BOARD)
+CFLAGS += -DPART_$(PART) -c -DTARGET_IS_TM4C123_RB1
 
-LDFLAGS = -nostdlib -T stm32f405.ld -Map=$@.map --cref --gc-sections
+LDFLAGS = -nostdlib -T $(LINKER_FILE) -Map=$@.map --cref --gc-sections
 else
 LD = gcc
 #CFLAGS = -m32 $(INC) -Wall -Werror -std=gnu99 $(COPT)
@@ -57,86 +59,70 @@ endif
 
 # Tune for Debugging or Optimization
 ifeq ($(DEBUG), 1)
-CFLAGS += -O0 -ggdb
+CFLAGS += -O0 -ggdb -D DEBUG
 else
 CFLAGS += -Os -DNDEBUG
 CFLAGS += -fdata-sections -ffunction-sections
 endif
 
-LIBS =
+
+LIBS = $(TIVAWARE_LIB)/driverlib/gcc/libdriver.a
+
+
+LICGCC := ${shell $(CC) $(CFLAGS) -print-libgcc-file-name}
+
+LIBC:=${shell ${CC} ${CFLAGS} -print-file-name=libc.a}
+
+LIBM:=${shell ${CC} ${CFLAGS} -print-file-name=libm.a}
+
 
 SRC_C = \
 	main.c \
-	startup_${COMPILER}.c \
+	startup_gcc.c \
 	uart_core.c \
-	uartstdio.c \
 	lib/utils/printf.c \
 	lib/utils/stdout_helpers.c \
 	lib/utils/pyexec.c \
 	lib/libc/string0.c \
 	lib/mp-readline/readline.c \
-	$(BUILD)/_frozen_mpy.c \
+	$(BUILD)/_frozen_mpy.c 
 
 OBJ = $(PY_CORE_O) $(addprefix $(BUILD)/, $(SRC_C:.c=.o))
 
-all: $(COMPILER)
-all: $(COMPILER)/firmware.axf
 
-$(COMPILER):
-	@mkdir -p $(BUILD)
-	
-#
-# Rules for building the hello example.
-#
-${COMPILER}/firmware.axf: ${COMPILER}/firmware.o
-${COMPILER}/firmware.axf: ${COMPILER}/startup_${COMPILER}.o
-${COMPILER}/firmware.axf: ${COMPILER}/uartstdio.o
-${COMPILER}/firmware.axf: ${ROOT}/driverlib/${COMPILER}/libdriver.a
-${COMPILER}/firmware.axf: tm4c123gh6pm.ld
-SCATTERgcc_hello=tm4c123gh6pm.ld
-ENTRY_hello=ResetISR
-CFLAGSgcc=-DTARGET_IS_TM4C123_RB1
+all: $(OBJ) ${PROJECT_NAME}.axf ${PROJECT_NAME}
 
-#
-# Include the automatically generated dependency files.
-#
-ifneq (${MAKECMDGOALS},clean)
--include ${wildcard ${COMPILER}/*.d} __dummy__
-endif
+%.o: %.c
+	@echo
+	@echo Compiling $<...
+	$(CC) -c $(CFLAGS) ${<} -o ${@}
 
-$(BUILD)/_frozen_mpy.c: frozentest.mpy $(BUILD)/genhdr/qstrdefs.generated.h
-	$(ECHO) "MISC freezing bytecode"
-	$(Q)$(TOP)/tools/mpy-tool.py -f -q $(BUILD)/genhdr/qstrdefs.preprocessed.h -mlongint-impl=none $< > $@
+${PROJECT_NAME}.axf: $(OBJ)
+	@echo
+	@echo Making driverlib
+	$(MAKE) -C ${TIVAWARE_LIB}driverlib/
+	@echo
+	@echo Linking...
+	$(LD) -T $(LINKER_FILE) $(LFLAGS) -o ${PROJECT_NAME}.axf $(OBJ) $(LIBS)  $(LIBM) $(LIBC) $(LIBGCC)
 
-$(BUILD)/firmware.elf: $(OBJ)
-	$(ECHO) "LINK $@"
-	$(Q)$(LD) $(LDFLAGS) -o $@ $^ $(LIBS)
-	$(Q)$(SIZE) $@
+${PROJECT_NAME}: ${PROJECT_NAME}.axf
+	@echo
+	@echo Copying...
+	$(OBJCOPY) $(CPFLAGS) ${PROJECT_NAME}.axf ${PROJECT_NAME}.bin
+	@echo
+	@echo Creating list file...
+	$(OD) $(ODFLAGS) ${PROJECT_NAME}.axf > ${PROJECT_NAME}.lst
 
-$(BUILD)/firmware.bin: $(BUILD)/firmware.elf
-	$(Q)$(OBJCOPY) -O binary -j .isr_vector -j .text -j .data $^ $(BUILD)/firmware.bin
 
-$(BUILD)/firmware.dfu: $(BUILD)/firmware.bin
-	$(ECHO) "Create $@"
-	$(Q)$(PYTHON) $(DFU) -b 0x08000000:$(BUILD)/firmware.bin $@
+# Rule to load the project to the board
+# I added a sudo because it's needed without a rule.
+load:
+	sudo ${FLASHER} ${PROJECT_NAME}.bin ${FLASHER_FLAGS}
 
-deploy: $(BUILD)/firmware.dfu
-	$(ECHO) "Writing $< to the board"
-	$(Q)$(PYTHON) $(PYDFU) -u $<
-
-# Run emulation build on a POSIX system with suitable terminal settings
-run:
-	stty raw opost -echo
-	build/firmware.elf
-	@echo Resetting terminal...
-# This sleep is useful to spot segfaults
-	sleep 1
-	reset
 
 test: $(BUILD)/firmware.elf
 	$(Q)/bin/echo -e "print('hello world!', list(x+1 for x in range(10)), end='eol\\\\n')\\r\\n\\x04" | $(BUILD)/firmware.elf | tail -n2 | grep "^hello world! \\[1, 2, 3, 4, 5, 6, 7, 8, 9, 10\\]eol"
-	
-clean:
-	@rm -rf ${COMPILER} ${wildcard *~}
+
+
 
 include $(TOP)/py/mkrules.mk
