--- a/ports/tm4c123/Makefile
+++ b/ports/tm4c123/Makefile
@@ -9,19 +9,8 @@ include ../../py/mkenv.mk
 # qstr definitions (must come before including py.mk)
 QSTR_DEFS = qstrdefsport.h
 
-#
 # Defines the part type that this project uses.
-#
 PART=TM4C123GH6PM
-
-# OpenOCD paths
-#OPENOCD_PATH = /usr/local/share/openocd
-OPENOCD_PATH = openocd
-
-#OPENOCD_BOARD_CFG = $(OPENOCD_PATH)/scripts/board/ek-tm4c123gxl.cfg
-OPENOCD_BOARD_CFG = openocd/ek-tm4c123gxl.cfg
-OPENOCD_PROG_CFG = openocd/tiva_flash.cfg
-
 
 # Name of the Project (and the resulting binary file)
 PROJECT_NAME = uPY_TM4C123
@@ -29,9 +18,6 @@ PROJECT_NAME = uPY_TM4C123
 # Location of the TivaWare library
 # Can be pointed to a newer version if desired
 TIVAWARE_LIB = TivaWare
-
-# The base directory for TivaWare.
-#ROOT = $(TIVAWARE_LIB)
 
 # include py core make definitions
 include $(TOP)/py/py.mk
@@ -76,6 +62,7 @@ CFLAGS += -fdata-sections -ffunction-sections
 endif
 
 #Libraries
+# TivaWare my not be needed when finished
 LIBS = $(TIVAWARE_LIB)/driverlib/gcc/libdriver.a
 LICGCC := ${shell $(CC) $(CFLAGS) -print-libgcc-file-name}
 LIBC := ${shell ${CC} ${CFLAGS} -print-file-name=libc.a}
@@ -102,32 +89,21 @@ $(BUILD)/_frozen_mpy.c: frozentest.mpy $(BUILD)/genhdr/qstrdefs.generated.h
 	$(ECHO) "MISC freezing bytecode"
 	$(Q)$(TOP)/tools/mpy-tool.py -f -q $(BUILD)/genhdr/qstrdefs.preprocessed.h -mlongint-impl=none $< > $@
 
-${PROJECT_NAME}.axf: $(OBJ)
+${PROJECT_NAME}.elf: $(OBJ)
 	@echo
 	@echo Making driverlib
 	$(MAKE) -C ${TIVAWARE_LIB}/driverlib/
 	@echo
 	@echo Linking...
-	$(LD) -T $(LINKER_FILE) $(LFLAGS) -o ${PROJECT_NAME}.axf $(OBJ) $(LIBS)  $(LIBM) $(LIBC) $(LIBGCC)
+	$(LD) -T $(LINKER_FILE) $(LFLAGS) -o ${PROJECT_NAME}.elf $(OBJ) $(LIBS)  $(LIBM) $(LIBC) $(LIBGCC)
 
-${PROJECT_NAME}: ${PROJECT_NAME}.axf
+${PROJECT_NAME}: ${PROJECT_NAME}.elf
 	@echo
 	@echo Copying...
-	$(OBJCOPY) $(CPFLAGS) ${PROJECT_NAME}.axf ${PROJECT_NAME}.bin
+	$(OBJCOPY) $(CPFLAGS) ${PROJECT_NAME}.elf ${PROJECT_NAME}.bin
 	@echo
-	@echo Creating list file...
-	$(OD) $(ODFLAGS) ${PROJECT_NAME}.axf > ${PROJECT_NAME}.lst
-
-# Move this to .sh file??
-load:
-	sudo openocd --file $(OPENOCD_BOARD_CFG)
-#-f $(OPENOCD_PROG_CFG) -c "tiva_flash `basename $(CURID) `$(PROJECT_NAME).bin" -c shutdown
-#gdb-multiarch
-#target extended-remote :3333
-#monitor reset halt
-#load
-#monitor reset init
-
+	#@echo Creating list file...
+	#$(OD) $(ODFLAGS) ${PROJECT_NAME}.axf > ${PROJECT_NAME}.lst
 
 include $(TOP)/py/mkrules.mk
 
@@ -135,4 +111,4 @@ clean:
 	rm -rf $(BUILD)
 	rm -f $(TIVAWARE_LIB)/driverlib/gcc/*.d
 	rm -f $(TIVAWARE_LIB)/driverlib/gcc/*.o
-	rm -f *.o *.d *.axf *.bin *.lst
+	rm -f *.o *.d *.elf *.bin *.lst
