ports/tm4c123: edited makefile and fixed includes

--- a/ports/tm4c123/Makefile
+++ b/ports/tm4c123/Makefile
@@ -29,7 +29,7 @@ TIVAWARE_LIB = /mnt/c/ti/TivaWare_C_Series-2.1.4.178
 
 # qstr definitions (must come before including py.mk)
 QSTR_DEFS = qstrdefsport.h $(BUILD)/pins_qstr.h
-QSTR_GLOBAL_DEPENDENCIES = mpconfigboard_common.h board/mpconfigboard.h
+QSTR_GLOBAL_DEPENDENCIES = board/mpconfigboard.h
 
 # include py core make definitions
 include $(TOP)/py/py.mk
@@ -65,7 +65,7 @@ PYDFU = $(TOP)/tools/pydfu.py
 CFLAGS_CORTEX_M4 = -mthumb -mtune=cortex-m4 -mabi=aapcs-linux -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -fsingle-precision-constant -Wdouble-promotion
 CFLAGS = $(INC) -Wall -Werror -std=c99 -nostdlib $(CFLAGS_CORTEX_M4) $(COPT)
 #Preprocessor Flags
-CFLAGS += -DPART_$(PART) -c -DTARGET_IS_TM4C123_RB1
+CFLAGS += -DPART_$(PART) -c -D$(PART) -DTARGET_IS_TM4C123_RB1 -DMICROPY_PIN_DEFS_PORT_H=\"mods/pin_defs_tm4c123.h\" -DMICROPY_MPHALPORT_H=\"mods/mphalport.h\"
 
 LDFLAGS = -nostdlib -T $(LINKER_FILE) --entry ResetISR -Map=$@.map --cref --gc-sections
 
@@ -167,7 +167,7 @@ load:
 #load
 #monitor reset init
 
-CLEAN_EXTRA += $(TIVAWARE_LIB)/driverlib/gcc/* *.axf *.bin *.lst
+CLEAN_EXTRA += *.axf *.bin *.lst #$(TIVAWARE_LIB)/driverlib/gcc/* 
 
 include $(TOP)/py/mkrules.mk
 
