--- a/ports/tm4c123/Makefile
+++ b/ports/tm4c123/Makefile
@@ -87,8 +87,7 @@ LIBM := ${shell ${CC} ${CFLAGS} -print-file-name=libm.a}
 
 # Module sources
 MODS_SRC_C = $(addprefix mods/,\
-	test.c \
-	modmachine.c \
+	pins.c \
 	)
 
 # QSTR sources
