ports/tm4c123: Added function to hal_pins and changed the names of other functions, cleaned the headers up a little

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,6 @@ user.props
 ######################
 genrst/
 
-ports/tm4c123/\.settings/language\.settings\.xml
-
 *.csv#
+
+ports/tm4c123/\.settings/
