--- a/ports/tm4c123/Makefile
+++ b/ports/tm4c123/Makefile
@@ -25,7 +25,7 @@ PROJECT_NAME = uPY_TM4C123
 
 # Location of the TivaWare library
 # Can be pointed to a newer version if desired
-TIVAWARE_LIB = /mnt/c/ti/TivaWare_C_Series-2.1.4.178
+TIVAWARE_LIB = /mnt/c/ti/TivaWare
 
 # qstr definitions (must come before including py.mk)
 QSTR_DEFS = qstrdefsport.h $(BUILD)/pins_qstr.h
@@ -65,7 +65,7 @@ PYDFU = $(TOP)/tools/pydfu.py
 CFLAGS_CORTEX_M4 = -mthumb -mtune=cortex-m4 -mabi=aapcs-linux -mcpu=cortex-m4 -mfpu=fpv4-sp-d16 -mfloat-abi=hard -fsingle-precision-constant -Wdouble-promotion
 CFLAGS = $(INC) -Wall -Werror -std=c99 -nostdlib $(CFLAGS_CORTEX_M4) $(COPT)
 #Preprocessor Flags
-CFLAGS += -DPART_$(PART) -c -D$(PART) -DTARGET_IS_TM4C123_RB1 -DMICROPY_PIN_DEFS_PORT_H=\"mods/pin_defs_tm4c123.h\" -DMICROPY_MPHALPORT_H=\"mods/mphalport.h\"
+CFLAGS += -DPART_$(PART) -c -D$(PART) -DTARGET_IS_TM4C123_RB1 -DMICROPY_PIN_DEFS_PORT_H=\"mods/pin_defs_tm4c123.h\" -DMICROPY_MPHALPORT_H=\"mphalport.h\"
 
 LDFLAGS = -nostdlib -T $(LINKER_FILE) --entry ResetISR -Map=$@.map --cref --gc-sections
 
@@ -87,7 +87,8 @@ LIBM := ${shell ${CC} ${CFLAGS} -print-file-name=libm.a}
 
 # Module sources
 MODS_SRC_C = $(addprefix mods/,\
-	pins.c \
+	modmachine.c \
+	pin.c \
 	)
 
 # QSTR sources
