--- a/ports/tm4c123/.cproject
+++ b/ports/tm4c123/.cproject
@@ -35,6 +35,7 @@
 									<listOptionValue builtIn="false" value="&quot;C:\ti\TivaWare&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\ti\TivaWare\driverlib&quot;"/>
 									<listOptionValue builtIn="false" value="/home/raphael/ti/tivaware"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/micropython}&quot;"/>
 								</option>
 								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1581719304" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="PART_TM4C123GHPM"/>
